# PythonTemplate

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  copier.yml  docker-compose.yaml  environment.yml  pyproject.toml  pyproject.toml.jinja  requirements.txt
Tests/: header.py  test_main.py
src/: __init__.py  lol.py  main.py
utils/: figurestil.mplstyle
