[project]
name = "python_template"
version = "0.1.0"
description = "A Template for Python Projects"
authors = [{name = "Yannick Kees"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["python_template", "devops", "MLOps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true

[tool.ruff.lint]
select = ["F401","F841", "E", "F", "W", "I", "COM", "UP", "B", "A", "PTH"]
extend-select = ["UP"]
ignore = ["T201", "D203", "D213"]  

[dependency-groups]
dev = [
    "black>=25.11.0",
    "codespell>=2.4.1",
    "docformatter>=1.7.7",
    "isort>=6.1.0",
    "pytest>=8.4.2",
    "ruff>=0.14.5",
]
